kurbenetes/vivespaces-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vivespaces-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
spec:
  ingressClassName: nginx
  rules:
  - host: vivespaces.com.mx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vivespaces-app
            port:
              number: 80
